# px

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.org  justfile
examples/: contract.px  curl.px  defer.px  file.px  http.px  namegen.px  partial-specialization.px  test.px  time-example.px  tuple.px  union.px  vector.px
include/backend/: analyzer.hpp  codegen.hpp  scope.hpp  symbol.hpp  type.hpp  type_registry.hpp  value.hpp
include/frontend/: ast.hpp  diagnostic.hpp  lexer.hpp  parser.hpp  path.hpp  source.hpp  token.hpp
src/backend/: analyzer.cpp  codegen.cpp  scope.cpp  type.cpp  type_registry.cpp  value.cpp
src/frontend/: ast.cpp  compiler.cpp  diagnostic.cpp  lexer.cpp  parser.cpp  path.cpp  source.cpp  token.cpp
tests/: contracts.md  test_util.px  tuple.md
